{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 66,
  "lineage": "833dc677-3ea3-9e5b-51cb-75e7f0d1d606",
  "resources": [
    {
      "module": "module.InternetGW",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029517848233:internet-gateway/igw-06059ada671454afe",
            "id": "igw-06059ada671454afe",
            "owner_id": "029517848233",
            "tags": {
              "Name": "InternetGw-1"
            },
            "tags_all": {
              "Name": "InternetGw-1"
            },
            "vpc_id": "vpc-07b8e5f2ab7f9086a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.natGW",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0655a9aab5957a4d7",
            "domain": "vpc",
            "id": "eipalloc-0655a9aab5957a4d7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-223-175-108.compute-1.amazonaws.com",
            "public_ip": "3.223.175.108",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.natGW",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0655a9aab5957a4d7",
            "association_id": "eipassoc-0f9328f612f69a29f",
            "connectivity_type": "public",
            "id": "nat-00d1519c5216692f8",
            "network_interface_id": "eni-0631df6ab38fd74a6",
            "private_ip": "192.168.2.80",
            "public_ip": "3.223.175.108",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06789f4fbcf8e905e",
            "tags": {
              "Name": "NATgw"
            },
            "tags_all": {
              "Name": "NATgw"
            }
          },
          "dependencies": [
            "module.natGW.aws_eip.nat",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pri-RouteTable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029517848233:route-table/rtb-0c81f7c5b47ccb3c5",
            "id": "rtb-0c81f7c5b47ccb3c5",
            "owner_id": "029517848233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00d1519c5216692f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateRT"
            },
            "tags_all": {
              "Name": "privateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b8e5f2ab7f9086a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.natGW.aws_eip.nat",
            "module.natGW.aws_nat_gateway.Nat-01",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pri-RouteTableAssociation",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d879bdab1e49e847",
            "route_table_id": "rtb-0c81f7c5b47ccb3c5",
            "subnet_id": "subnet-0b91700a057f6b1aa"
          },
          "dependencies": [
            "module.natGW.aws_eip.nat",
            "module.natGW.aws_nat_gateway.Nat-01",
            "module.pri-RouteTable.aws_route_table.route_table-1",
            "module.private-subnet.aws_subnet.subnet",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:029517848233:instance/i-0faaab3386b07fbdf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0faaab3386b07fbdf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fa7f99a209d8843f",
            "private_dns": "ip-192-168-1-65.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec4def607cb2299b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b91700a057f6b1aa",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-091c2907e85eb8dc0"
            ]
          },
          "dependencies": [
            "module.private-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029517848233:subnet/subnet-0b91700a057f6b1aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b91700a057f6b1aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029517848233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-07b8e5f2ab7f9086a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub-RouteTable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029517848233:route-table/rtb-0487e84a8c47ec495",
            "id": "rtb-0487e84a8c47ec495",
            "owner_id": "029517848233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06059ada671454afe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT"
            },
            "tags_all": {
              "Name": "PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b8e5f2ab7f9086a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.InternetGW.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pub-RouteTableAssociation",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa3857148bbe0738",
            "route_table_id": "rtb-0487e84a8c47ec495",
            "subnet_id": "subnet-06789f4fbcf8e905e"
          },
          "dependencies": [
            "module.InternetGW.aws_internet_gateway.internet_gateway",
            "module.pub-RouteTable.aws_route_table.route_table-1",
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029517848233:subnet/subnet-06789f4fbcf8e905e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06789f4fbcf8e905e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "029517848233",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-07b8e5f2ab7f9086a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:029517848233:instance/i-0e73f0cf4014f3b22",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e73f0cf4014f3b22",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "publicKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0043bf94c17ecc5b5",
            "private_dns": "ip-192-168-2-200.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.200",
            "public_ip": "107.21.184.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0829710ca1ad3659d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06789f4fbcf8e905e",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-091c2907e85eb8dc0"
            ]
          },
          "dependencies": [
            "module.public-subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029517848233:vpc/vpc-07b8e5f2ab7f9086a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0ec6af02923b75cb9",
            "default_route_table_id": "rtb-013ddb486ca246698",
            "default_security_group_id": "sg-091c2907e85eb8dc0",
            "dhcp_options_id": "dopt-0cc46a70f6869b63a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b8e5f2ab7f9086a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013ddb486ca246698",
            "owner_id": "029517848233",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}